[gd_scene load_steps=6 format=3 uid="uid://catuffa8vr7of"]

[ext_resource type="PackedScene" uid="uid://bd24fgyw20u7x" path="res://character_selector/character_selector.tscn" id="1_3dcl8"]
[ext_resource type="Script" path="res://character_selection/character_selection.gd" id="1_ispp7"]
[ext_resource type="Texture2D" uid="uid://co8ovvo42ycwi" path="res://assets/characters/fusion_scale.jpg" id="2_yxa6t"]
[ext_resource type="Texture2D" uid="uid://dxuu75x3x5mx3" path="res://assets/characters/area_scale.png" id="3_bj7qn"]
[ext_resource type="Texture2D" uid="uid://cqtexkon8cfub" path="res://assets/characters/all_scale.jpg" id="4_pviqj"]

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ispp7")

[node name="CharacterSelector" parent="." instance=ExtResource("1_3dcl8")]
layout_mode = 0
offset_left = 52.0
offset_top = 159.0
offset_right = 1012.0
offset_bottom = 659.0
scale = Vector2(0.56, 0.56)

[node name="CharacterSelector2" parent="." instance=ExtResource("1_3dcl8")]
layout_mode = 0
offset_left = 693.0
offset_top = 163.0
offset_right = 1653.0
offset_bottom = 663.0
scale = Vector2(0.560001, 0.560001)
texture_normal = ExtResource("2_yxa6t")
character = 1

[node name="CharacterSelector3" parent="." instance=ExtResource("1_3dcl8")]
layout_mode = 0
offset_left = 1390.0
offset_top = 76.0
offset_right = 2566.0
offset_bottom = 1033.0
scale = Vector2(0.400002, 0.400002)
texture_normal = ExtResource("3_bj7qn")
character = 2

[node name="CharacterSelector4" parent="." instance=ExtResource("1_3dcl8")]
layout_mode = 0
offset_left = 773.0
offset_top = 480.0
offset_right = 1318.0
offset_bottom = 1214.0
scale = Vector2(0.760002, 0.760002)
texture_normal = ExtResource("4_pviqj")
character = 3

[node name="MinusButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1490.0
offset_top = 835.0
offset_right = 1570.0
offset_bottom = 1005.0
theme_override_font_sizes/font_size = 60
text = "-"

[node name="PlusButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1776.0
offset_top = 835.0
offset_right = 1856.0
offset_bottom = 1005.0
theme_override_font_sizes/font_size = 60
text = "+"

[node name="BallsQuantity" type="Label" parent="."]
layout_mode = 0
offset_left = 1579.0
offset_top = 829.0
offset_right = 1769.0
offset_bottom = 994.0
theme_override_font_sizes/font_size = 120
text = "6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1454.0
offset_top = 710.0
offset_right = 1894.0
offset_bottom = 820.0
theme_override_font_sizes/font_size = 80
text = "Balls / turn"

[node name="ActionMinus" type="Button" parent="."]
layout_mode = 0
offset_left = 135.0
offset_top = 835.0
offset_right = 215.0
offset_bottom = 1005.0
theme_override_font_sizes/font_size = 60
text = "-"

[node name="ActionPlus" type="Button" parent="."]
layout_mode = 0
offset_left = 421.0
offset_top = 835.0
offset_right = 501.0
offset_bottom = 1005.0
theme_override_font_sizes/font_size = 60
text = "+"

[node name="ActionsQuantity" type="Label" parent="."]
layout_mode = 0
offset_left = 224.0
offset_top = 829.0
offset_right = 414.0
offset_bottom = 994.0
theme_override_font_sizes/font_size = 120
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 710.0
offset_right = 574.0
offset_bottom = 820.0
theme_override_font_sizes/font_size = 80
text = "Actions / turn"

[connection signal="pressed" from="MinusButton" to="." method="_on_minus_button_pressed"]
[connection signal="pressed" from="PlusButton" to="." method="_on_plus_button_pressed"]
[connection signal="pressed" from="ActionMinus" to="." method="_on_action_minus_pressed"]
[connection signal="pressed" from="ActionPlus" to="." method="_on_action_plus_pressed"]
